# hockey-manager

./: .gitignore  CLAUDE.md  README.md  backlog.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7f9cec9abb5c_init_schema.py  9243189bb48c_seed_bigint.py  a1b2c3d4e5f6_phase2_period_strength_penalties.py  a7b8c9d0e1f2_phase8_contracts.py  b2c3d4e5f6a7_phase2a_shot_quality.py  b8c9d0e1f2a3_phase9_manager_profile.py  c3d4e5f6a7b8_phase4_player_development.py  d4e5f6a7b8c9_phase5a_team_gameplan.py  e5f6a7b8c9d0_phase6_free_agency.py  f6a7b8c9d0e1_phase7_playoffs.py
backend/app/: config.py  db.py  errors.py  main.py
backend/app/api/: __init__.py  free_agents.py  gameplan.py  games.py  league.py  lineup.py  manager.py  (+8 more)
backend/data/: first_names.json  last_names.json  team_names.json
backend/sim/: constants.py  development.py  engine.py  models.py  ratings.py  rotation.py  seed.py  special_teams.py
backend/tests/: conftest.py  test_age_helper.py  test_career_stats.py  test_contract_generation.py  test_contract_service.py  test_development_sim.py  test_free_agent_generation.py  test_free_agents_api.py  test_full_loop_with_contracts.py  test_gameplan_api.py  test_gameplan_sim.py  test_league_creates_free_agents.py  test_lineup_incomplete_blocks_advance.py  test_models_smoke.py  test_offseason_phase.py  test_player_career_api.py  test_release_preserves_contract.py  test_season_rollover.py  test_sign_contract_api.py  test_sign_release_api.py  test_trade_api.py  test_trade_block.py  test_trade_eval.py  test_trade_ntc.py
(+181 files in other folders)
